--- a/settings.ini
+++ b/settings.ini
@@ -38,7 +38,7 @@ status = 3
 user = AnswerDotAI
 
 ### Optional ###
-requirements = python-fasthtml httpx playwrightnb toolslm fastcore
+requirements = python-fasthtml httpx playwrightnb toolslm fastcore llms-txt
 # dev_requirements = 
 # console_scripts =
 # conda_user = 
