--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,7 +6,7 @@ permissions:
 
 on:
   push:
-    branches: [ "main", "master", "V2" ]
+    branches: [ "main", "master"]
   workflow_dispatch:
 jobs:
   deploy:
