CLI initial commit

--- a/settings.ini
+++ b/settings.ini
@@ -39,6 +39,8 @@ user = AnswerDotAI
 
 ### Optional ###
 requirements = python-fasthtml httpx toolslm fastcore llms-txt PyPDF2 youtube_transcript_api pytube
+console_scripts = ck=ContextKit.projects:ck
+
 # dev_requirements = 
 # console_scripts =
 # conda_user = 
