--- a/settings.ini
+++ b/settings.ini
@@ -39,7 +39,7 @@ user = AnswerDotAI
 
 ### Optional ###
 requirements = python-fasthtml httpx toolslm fastcore llms-txt PyPDF2 youtube_transcript_api pytube
-console_scripts = ck=ContextKit.projects:ck
+console_scripts = ck=ContextKit.cli:ck
 
 # dev_requirements = 
 # console_scripts =
