--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,4 +4,14 @@ on:  [workflow_dispatch, pull_request, push]
 jobs:
   test:
     runs-on: ubuntu-latest
-    steps: [uses: fastai/workflows/nbdev-ci@master]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      - name: Install playwrightnb and dependencies
+        run: |
+          pip install playwrightnb
+          playwright install
+      - uses: fastai/workflows/nbdev-ci@master
