--- a/settings.ini
+++ b/settings.ini
@@ -38,7 +38,7 @@ status = 3
 user = AnswerDotAI
 
 ### Optional ###
-requirements = python-fasthtml httpx toolslm fastcore llms-txt PyPDF2 youtube_transcript_api pytube
+requirements = python-fasthtml httpx toolslm fastcore llms-txt PyPDF2 youtube_transcript_api pytube playwrightnb
 console_scripts = ck=ContextKit.cli:ck
 
 # dev_requirements = 
