--- a/settings.ini
+++ b/settings.ini
@@ -3,16 +3,16 @@
 # See https://github.com/fastai/nbdev/blob/master/settings.ini for examples.
 
 ### Python library ###
-repo = ContextKit
+repo = contextkit
 lib_name = %(repo)s
 version = 0.0.1
-min_python = 3.7
+min_python = 3.11
 license = apache2
 black_formatting = False
 
 ### nbdev ###
 doc_path = _docs
-lib_path = ContextKit
+lib_path = contextkit
 nbs_path = nbs
 recursive = True
 tst_flags = notest
@@ -29,7 +29,7 @@ title = %(lib_name)s
 ### PyPI ###
 audience = Developers
 author = Isaac Flath
-author_email = Isaac.flath@gmail.com
+author_email = isaac.flath@gmail.com 
 copyright = 2024 onwards, %(author)s
 description = Reusable contexts for LLMs
 keywords = nbdev jupyter notebook python
