--- a/nbs/nbdev.yml
+++ b/nbs/nbdev.yml
@@ -2,8 +2,8 @@ project:
   output-dir: _docs
 
 website:
-  title: "ContextKit"
-  site-url: "https://AnswerDotAI.github.io/ContextKit"
+  title: "contextkit"
+  site-url: "https://AnswerDotAI.github.io/contextkit"
   description: "Reusable contexts for LLMs"
   repo-branch: main
-  repo-url: "https://github.com/AnswerDotAI/ContextKit"
+  repo-url: "https://github.com/AnswerDotAI/contextkit"
