--- a/settings.ini
+++ b/settings.ini
@@ -1,46 +1,38 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified.
-# See https://github.com/fastai/nbdev/blob/master/settings.ini for examples.
-
-### Python library ###
 repo = contextkit
-lib_name = %(repo)s
-version = 0.0.1
+lib_name = contextkit
+version = 0.0.2
 min_python = 3.11
 license = apache2
 black_formatting = False
-
-### nbdev ###
 doc_path = _docs
 lib_path = contextkit
 nbs_path = nbs
 recursive = True
 tst_flags = notest
 put_version_in_init = True
-
-### Docs ###
 branch = main
 custom_sidebar = False
-doc_host = https://%(user)s.github.io
-doc_baseurl = /%(repo)s
-git_url = https://github.com/%(user)s/%(repo)s
-title = %(lib_name)s
-
-### PyPI ###
+doc_host = https://AnswerDotAI.github.io
+doc_baseurl = /contextkit
+git_url = https://github.com/AnswerDotAI/contextkit
+title = contextkit
 audience = Developers
 author = Isaac Flath
-author_email = isaac.flath@gmail.com 
-copyright = 2024 onwards, %(author)s
+author_email = isaac.flath@gmail.com
+copyright = 2024 onwards, Isaac Flath
 description = Reusable contexts for LLMs
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = AnswerDotAI
-
-### Optional ###
 requirements = python-fasthtml httpx toolslm fastcore llms-txt PyPDF2 youtube_transcript_api pytube playwrightnb
+readme_nb = index.ipynb
+allowed_metadata_keys = 
+allowed_cell_metadata_keys = 
+jupyter_hooks = False
+clean_ids = True
+clear_all = False
+cell_number = True
+skip_procs = 
 
-# dev_requirements = 
-# console_scripts =
-# conda_user = 
-# package_data =
