pypdf2 has moved to pypdf

--- a/settings.ini
+++ b/settings.ini
@@ -26,7 +26,7 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = AnswerDotAI
-requirements = python-fasthtml httpx toolslm fastcore llms-txt PyPDF2 youtube_transcript_api pytube playwrightnb
+requirements = python-fasthtml httpx toolslm fastcore llms-txt pypdf youtube_transcript_api pytube playwrightnb
 readme_nb = index.ipynb
 allowed_metadata_keys = 
 allowed_cell_metadata_keys = 
