--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 repo = contextkit
 lib_name = contextkit
-version = 0.0.7
+version = 0.0.8
 min_python = 3.11
 license = apache2
 black_formatting = False
@@ -35,4 +35,5 @@ clean_ids = True
 clear_all = False
 cell_number = True
 skip_procs = 
+update_pyproject = True
 
